fix: network nodes not fitting in the same row

--- a/public/index.css
+++ b/public/index.css
@@ -357,6 +357,7 @@ button {
     flex-direction: row;
     justify-content: center;
     gap: 1%;
+    width: 100%;
 }
 
 .node-stat-block {
